cabal-version:       3.0
name:                music
version:             0.1.0.0
author:              Frank Terbeck
maintainer:          ft@bewatermyfriend.org
build-type:          Simple

executable music
  main-is:             Main.hs
  other-modules:       Avril14
  build-depends:       base >=4.13 && <5,
                       random >=1.0.1.1 && <=1.3,
                       Euterpea == 2.0.8
  default-language:    Haskell2010
